Moved around css file

--- a/readme.html
+++ b/readme.html
@@ -2,7 +2,7 @@
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,600' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/css/foundation.min.css">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="readme/css/style.css">
+<link rel="stylesheet" type="text/css" href="css/readme_style.css">
 
 <div ng-bind-html="trustedHtml" class="ng-binding"><h3>MIDI-part-splitter</h3>
       <h4>Dependencies</h4>
