--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage!</title>
+    <link rel="icon" href="img/favicon.png">
+    <title>idgarza.dev</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-  </body>
-</html>
+    <p>This is a basic landing page for idgarza.dev. Documentation for the MIDI Splitting tool is at <a href="https://idgarza.dev/readme">idgarza.com/readme</a>.</p> 
+      <br>
+    <p>My personal website is at <a href="https://idgarza.com">idgarza.com</a>.</p>
+
+    </body>
