Testing deployment of file upload

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -51,7 +51,7 @@ license that can be found in the LICENSE file.
 
     <form
     enctype="multipart/form-data"
-    action="http://localhost:8080/upload"
+    action="https://idgarza.dev/wasm/uploaded"
     method="post"
   >
     <input type="file" name="myFile" />
