Cleaned up some code, clarified comments, and updated README

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>idgarza.dev</title>
   </head>
   <body>
-    <p>This is a basic landing page for idgarza.dev. Documentation for the MIDI Splitting tool is at <a href="https://idgarza.dev/readme">idgarza.com/readme</a>.</p> 
+    <p>This is a basic landing page for idgarza.dev. Documentation for the MIDI Splitting tool is at <a href="https://idgarza.dev/readme">idgarza.dev/readme</a>.</p> 
       <br>
-    <p>My personal website is at <a href="https://idgarza.com">idgarza.com</a>.</p>
+    <p>My personal website is at <a href="https://idgarza.com">www.idgarza.com</a>.</p>
 
     </body>
